internal/lang/test/testdata/errors/bool_op_non_bool.scampi
module main

let x = "hello" && true
